# gensim-fasttext-service

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  gunicorn.py  pyproject.toml  release.sh
.github/workflows/: release.yaml  test.yaml
script/: build_model.py
service/: app.py
