[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "gensim-fasttext-service"
version = "0.1.0"
description = "A demo web service wrapping up Gensim's FastText model and similarity query."
authors = ["Tianyu Gu <gty@franz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
gensim = "3.8.3"
flask = "1.1.2"
gunicorn = "20.0.4"
gevent = "^20.9.0"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
